--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="bl0op">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <img src="assets/img/bl0op_logo.svg" alt="logo"/>
-            <nav>
-                <ul class="navbar">
-                    <li class="nav-item">
+            <img src="assets/img/bl0op_logo.svg" class="logo" alt="logo"/>
+            <nav class="navbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item current">
                         <a>Home</a>
                     </li>
                     <li class="nav-item">
@@ -38,9 +39,9 @@
                     congressus copulationesque et consuetudinum
                     instituendarum voluntates fieri propter voluptatem;
                     Quo modo autem philosophus loquitur?
-                     Iam enim adesse poterit. 
+                     Iam enim adesse poterit.. 
                 </article>
-                <img src="assets/img/me.png" alt="me" class="media-img">
+                <img src="assets/img/me.png" alt="me">
             </div>
         </div>
     </section>
