Media block optimized

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <section class="showcase">
         <div class="container">
             <div class="media">
+                <img src="assets/img/me.png" alt="me" class="media-img-right">
                 <article class="media-body">
                     Lorem ipsum dolor sit amet,
                     consectetur adipiscing elit.
@@ -40,8 +41,26 @@
                     instituendarum voluntates fieri propter voluptatem;
                     Quo modo autem philosophus loquitur?
                      Iam enim adesse poterit.. 
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit.
+                    Mene ergo et Triarium dignos existimas,
+                    apud quos turpiter loquare? Eam tum adesse,
+                    cum dolor omnis absit; Duo Reges:
+                    constructio interrete. Itaque primos
+                    congressus copulationesque et consuetudinum
+                    instituendarum voluntates fieri propter voluptatem;
+                    Quo modo autem philosophus loquitur?
+                     Iam enim adesse poterit.. 
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit.
+                    Mene ergo et Triarium dignos existimas,
+                    apud quos turpiter loquare? Eam tum adesse,
+                    cum dolor omnis absit; Duo Reges:
+                    constructio interrete. Itaque primos
+                    congressus copulationesque et consuetudinum
+                    instituendarum voluntates fieri propter voluptatem;
+                    Quo modo autem philosophus loquitur?
                 </article>
-                <img src="assets/img/me.png" alt="me">
             </div>
         </div>
     </section>
