--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
             <img src="assets/img/bl0op_logo.svg" class="logo" alt="logo"/>
             <nav class="navbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item current">
-                        <a>Home</a>
+                    <li>
+                        <a href="#" class="nav-item current" data-target="home">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a>About</a>
+                    <li>
+                        <a href="#" class="nav-item" data-target="about">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a>Contact Me</a>
+                    <li>
+                        <a href="#" class="nav-item" data-target="contact-me">Contact Me</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <section class="showcase">
+    <!-- Home tab -->
+    <section class="showcase tab" id="home">
         <div class="container">
             <div class="media">
                 <img src="assets/img/me.png" alt="me" class="media-img-right">
@@ -60,14 +61,42 @@
                     congressus copulationesque et consuetudinum
                     instituendarum voluntates fieri propter voluptatem;
                     Quo modo autem philosophus loquitur?
+
                 </article>
             </div>
         </div>
     </section>
+
+    <!-- About tab -->
+    <section class="showcase tab" id="about">
+        <div class="container">
+            <div class="media">
+                <img src="assets/img/Frontend.png" alt="frontend image" class="media-img-left">
+                <article class="media-body">
+                     Hi, my name is Yaroslav and I’m beginner in Web Design.
+                     I’m passionate about everything that concerns
+                     modern Frontend development.
+                     You are at my first portfolio tribute project now.
+                     To see my remaining works please 
+                     follow “Contact Me” link. 
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Me tab-->
+    <section class="showcase tab active" id="contact-me">
+        <div class="container">
+          Hello
+        </div>
+    </section>
+
     <footer>
         <div class="container">
             bl0op 2020 ©
         </div>
     </footer>
+
+    <script src="scripts/script.js"></script>
 </body>
 </html>
