Contact me tab added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </header>
     <!-- Home tab -->
-    <section class="showcase tab" id="home">
+    <section class="showcase tab active" id="home">
         <div class="container">
             <div class="media">
                 <img src="assets/img/me.png" alt="me" class="media-img-right">
@@ -85,9 +85,26 @@
     </section>
 
     <!-- Contact Me tab-->
-    <section class="showcase tab active" id="contact-me">
+    <section class="showcase tab" id="contact-me">
         <div class="container">
-          Hello
+          <p>
+              <img src="assets/img/envelope-solid.svg" class="icon" alt="envelope icon">
+              email - <a href="mailto:jaroslavkalinin97@gmail.com">jaroslavkalinin97@gmail.com</a>
+          <p>
+          <p>
+              <img src="assets/img/phone-solid.svg" class="icon" alt="icon">
+              phone(ru) - <a href="tel:8-950-018-50-48">8-950-018-50-48</a>
+          <p>
+          <p>
+              <img src="assets/img/address-card-solid.svg" class="icon" alt="cv icon">
+              <a href="https://spb.hh.ru/resume/ede7571aff07fd0c650039ed1f694c47483067">cv on HeadHunter</a>
+          <p>
+          <p>
+            <a href="https://github.com/bl0op/tribute-page">Github project link</a>
+          </p>
+          <p>
+            <a href="#">Other projects</a>
+          </p>
         </div>
     </section>
 
