Middle-width devices design added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="bl0op">
-    <title>Document</title>
+    <title>Tribute</title>
+    <link rel="icon" href="assets/img/me.png" type="image/icon type">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -24,6 +25,7 @@
                     </li>
                 </ul>
             </nav>
+            <div class="toggler"><img src="assets/img/bars-solid.svg"></div>
         </div>
     </header>
     <!-- Home tab -->
